# pep440-rs

./: Cargo.toml  LICENSE.BSD  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/traits/: trait.FromStr.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pep440/: all.html  enum.LocalVersion.html  enum.PreRelease.html  index.html  sidebar-items.js  struct.Version.html
src/: error.rs  lib.rs
src/pep440/: error.rs.html  lib.rs.html
tests/: comparisons  gen_test_cases.py  test_comparison.rs
