[package]
name = "pep440"
version = "0.1.0"
authors = ["Rick Elrod <relrod@redhat.com>"]
description = "Parse and compare Python PEP440 style version numbers"
repository = "https://github.com/relrod/pep440-rs"
license = "BSD-2-Clause OR Apache-2.0"
keywords = ["pep440", "python", "version", "versions"]
categories = ["parser-implementations", "value-formatting", "development-tools"]
edition = "2018"

[dependencies]
lazy_static = "1"
regex = "1"
